-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0
-
None
-
ubuntu, 3288e355c1d96cd3ac70b0dc9a88ad73f2d94517
Build a route with default values (-27.575, 153.088) -> (-27.465,153.023) in Mapviewer and compare instruction steps with following link:
The Last step "Arrive at Bartley St. The trip takes 10 miles and 14 mins." is missing in Mapviewer.
For Gerrit Dashboard: QTBUG-24341 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
16993,1 | Fix up issues with parsing Route XML in Nokia plugin | master | qt/qtlocation | Status: MERGED | +2 | 0 |